--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   
   <title>Frontend Mentor | QR code component</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
+  
   <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@200&display=swap" rel="stylesheet">
@@ -36,19 +36,19 @@
       
     }
     .qc-code-inner{
-      padding: 50px;
+      padding: 20px;
       text-align: center; 
-      width: 200px;
+      width: 220px;
     }
     .img{
       width: 100%;
       height: 100%;
-      border-radius: 15px;
+      border-radius: 8px;
     }
     .text-heading{
       font-weight: 700;
       font-family: Outfit,monospace , sans-serif;
-      padding-top: 50px;
+      padding-top: 40px;
 
 
     }
@@ -58,7 +58,7 @@
       font-weight: 400;
     }
   
-    /* Screen sizes */
+    /* Mobile Screen sizes */
 
     @media(max-width:375px){
       .qc-code-outer{
@@ -80,7 +80,7 @@
       font-weight: 700;
       font-family: Outfit,monospace, sans-serif;
       padding-top: 20px;
-  }
+  }}
 
   </style>
 </head>
